test/bad/classes/struct06.px

class Class def
    x: Int
    x: Int
